# welding_cell_ws

./: .gitignore  README.md  chat before docker.md
.devcontainer/: devcontainer.json  setup.sh
ros2_ws/src/: .gitkeep
ros2_ws/src/redball_follower/: CMakeLists.txt  Project_readme.md  chat_history.md  chat_history2.md  concept_cmakelists.md  object_tracking_pipeline.md  package.xml  readme.md  revised_control_pipeline.md
ros2_ws/src/redball_follower/config/: controllers.yaml  ros2_controllers.yaml  ur5e.srdf
ros2_ws/src/redball_follower/launch/: redball_follower.launch.py
ros2_ws/src/redball_follower/scripts/: red_ball_spawner.py
ros2_ws/src/redball_follower/src/: ball_tracker_node.cpp  jacobian_calculator_node.cpp  ur5e_velocity_controller_node.cpp
ros2_ws/src/redball_follower/urdf/: ur5e.urdf  ur5e.urdf.xacro
scripts/: prepare_host.sh
