<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>redball_follower</name>
  <version>1.0.0</version>
  <description>
    UR5e robot arm with D435 camera tracking a red ball using IBVS control
    with manipulability-aware cost function. Designed for Isaac Sim.
  </description>
  <maintainer email="cagdas96vkp@gmail.com">Cagdas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Core ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Vision dependencies -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>image_geometry</depend>

  <!-- Robot description -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>

  <!-- Control -->
  <depend>controller_manager</depend>
  <depend>joint_trajectory_controller</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
